# App-RippleTrellis

./: .gitignore  README.md  pyproject.toml
src/lsl_ripple/: __init__.py  cli.py  device.py  stream.py
