[project]
name = "lsl-ripple"
dynamic = ["version"]
description = "Application to stream data from Ripple Trellis over LabStreamingLayer"
readme = "README.md"
authors = [
    { name = "Chadwick Boulay", email = "chadwick.boulay@gmail.com" }
]
requires-python = ">=3.9,<3.12"
dependencies = [
    "numpy>=2.0.2",
    "pylsl>=1.17.6",
    "typer>=0.15.2",
    "xipppy",
]

[project.scripts]
lsl-ripple = "lsl_ripple.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.8",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/lsl_ripple/__version__.py"

[tool.uv]
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'x86_64'",
]

[tool.uv.sources]
xipppy = [
    { url = "https://github.com/labstreaminglayer/App-RippleTrellis/releases/download/v0.0/xipppy-0.18.24-cp311-cp311-win_amd64.whl", marker = "python_version == '3.11'" },
    { url = "https://github.com/labstreaminglayer/App-RippleTrellis/releases/download/v0.0/xipppy-0.18.24-cp310-cp310-win_amd64.whl", marker = "python_version == '3.10'" },
    { url = "https://github.com/labstreaminglayer/App-RippleTrellis/releases/download/v0.0/xipppy-0.18.24-cp39-cp39-win_amd64.whl", marker = "python_version == '3.9'" }
]
